--- a/app/package.json
+++ b/app/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "my-business-app",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@project-serum/anchor": "^0.26.0",
-    "@solana/wallet-adapter-base": "^0.9.23",
-    "@solana/wallet-adapter-phantom": "^0.9.24",
     "@solana/wallet-adapter-react": "^0.15.35",
-    "@solana/wallet-adapter-react-ui": "^0.9.34",
+    "@solana/wallet-adapter-wallets": "^0.19.23",
     "@solana/web3.js": "^1.87.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.61",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
     "browserify-zlib": "^0.2.0",
-    "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "react": "^18.2.0",
@@ -25,7 +18,6 @@
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "typescript": "^4.9.5",
     "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
